# gtest_demo

0.env/: readme.md
0.env/src_demo/win_googletest/: CMakeLists.txt
0.env/src_demo/win_googletest/src/: main.c
0.env/src_demo/win_googletest/src/calculate/: add.c
0.env/src_demo/win_googletest/src/calculate/include/: add.h
0.env/src_demo/win_googletest/unittest/testcase/calculate_test/: CMakeLists.txt  calculate_test.cpp
